# eng2ipa

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
